fix versioning issues with switch syntax, collectors